<resources>
    <string name="app_name">Calculator</string>
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="op_Equals">=</string>
    <string name="op_Plus">+</string>
    <string name="op_Minus">-</string>
    <string name="op_Multiply">*</string>
    <string name="op_Divide">/</string>
    <string name="func_Clear">Clear</string>
    <string name="txt_remove">←</string>
    <string name="txt_decmial">.</string>
    <string name="txt_negative">-/+</string>
</resources>
